syntax = "proto3";

option java_package = "aggregate";
option java_multiple_files = true;
option java_outer_classname = "AggregateProto";

package grpcAggregate;

service AggregateGrpc{
    rpc createProduct(ProductRequest) returns (Product);
    rpc findProduct(ProductId) returns (Product);
    rpc getAllProduct(Empty) returns (ListOfProduct);
}

message ProductId {
    string id = 1;
}

message Empty {}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    string img = 4;
    repeated Category categories=5;
    repeated Platform platforms = 6; 
}

message ProductRequest {
    string name = 1;
    string description = 2;
    string img = 3;
    repeated string category_id = 4;
    repeated SendPlatform platforms = 5; 
}

message Category{
    string id=1;
    string name=2;
}

message Platform{
    string id=1;
    string name=2;
    double price=3;
}

message SendPlatform{
    string id=1;
    double price=2;
}

message PlatformId{
    string id=1;
}

message ListOfProduct {
    repeated Product products = 1;
}
